Updating Introduction section of BJJ / Karate / Muay Thai

--- a/class-bjj.html
+++ b/class-bjj.html
@@ -197,7 +197,7 @@
     <section class="class-intro-container-outer">
       <div class="class-intro-container-inner">
         <h1 class="class-title">Brazilian Jiu-Jitsu</h1>
-        <p>Brazilian Jiu-Jitsu, renowned for its grappling and ground techniques, dominates combat sports, notably in the UFC. Helio Gracie's modifications empowered smaller individuals to triumph over larger opponents—a principle central to its effectiveness, especially in the UFC. Employing joint locks and chokes, pioneers like Royce Gracie solidified BJJ's status as a premier self-defense method. Today, BJJ continues to empower practitioners in both competitive and real-world scenarios.</p>
+        <p>Brazilian Jiu-Jitsu, renowned for its grappling and ground techniques, dominates combat sports, notably in the UFC. Helio Gracie's modifications empowered smaller individuals to triumph over larger opponents—a principle central to its effectiveness, especially in the UFC. Employing joint locks and chokes, pioneers like Royce Gracie solidified BJJ's status as a premier self-defense method. Today, BJJ continues to empower practitioners in both competitive and real-world scenarios. It plays a vital role in MMA (Mixed Martial Arts), providing fighters with essential skills for both standing and ground combat.</p>
       </div>
       <div class="shape-divider-bottom">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
