--- a/class-karate.html
+++ b/class-karate.html
@@ -197,7 +197,7 @@
     <section class="class-intro-container-outer">
       <div class="class-intro-container-inner">
         <h1 class="class-title">Karate</h1>
-        <p>Kenpo Karate, a dynamic martial art rooted in Japanese and Chinese traditions, offers practitioners a comprehensive system of self-defense techniques and physical conditioning. Renowned for its practicality and adaptability, Kenpo Karate emphasizes rapid strikes, fluid movement, and efficient counterattacks. With a focus on both physical and mental development, Kenpo Karate fosters discipline, confidence, and situational awareness. Join us to explore the art of Kenpo Karate and unlock your potential in a supportive and empowering environment.</p>
+        <p>Kenpo Karate, a dynamic martial art rooted in Japanese and Chinese traditions, offers practitioners a comprehensive system of self-defense techniques and physical conditioning, making it relevant not only in traditional martial arts but also in MMA (Mixed Martial Arts). Renowned for its practicality and adaptability, Kenpo Karate emphasizes rapid strikes, fluid movement, and efficient counterattacks, essential skills for any Mixed Martial Artist. With a focus on both physical and mental development, Kenpo Karate fosters discipline, confidence, and situational awareness. Join us to explore the art of Kenpo Karate and unlock your potential in a supportive and empowering environment for both traditional martial arts and MMA enthusiasts alike.</p>
       </div>
       <div class="shape-divider-bottom">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
