--- a/class-muay-thai.html
+++ b/class-muay-thai.html
@@ -197,7 +197,7 @@
     <section class="class-intro-container-outer">
       <div class="class-intro-container-inner">
         <h1 class="class-title">Mauy Thai</h1>
-        <p>Muay Thai, revered for its striking and clinching techniques, holds sway in combat sports across the globe. Renowned trainers and fighters have elevated its effectiveness, allowing practitioners to excel in various arenas. With its arsenal of powerful strikes, devastating knees, and precise clinch work, Muay Thai has solidified its position as a premier striking art. It empowers individuals of all backgrounds, offering not just physical fitness but also mental resilience and self-confidence.</p>
+        <p>Muay Thai, revered for its striking and clinching techniques, holds sway in combat sports across the globe, including MMA (Mixed Martial Arts). Renowned trainers and fighters have elevated its effectiveness, allowing practitioners to excel in various arenas. With its arsenal of powerful strikes, devastating knees, and precise clinch work, Muay Thai has solidified its position as a premier striking art within the realm of MMA. It empowers individuals of all backgrounds, offering not just physical fitness but also mental resilience and self-confidence.</p>
       </div>
       <div class="shape-divider-bottom">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
