--- a/class-karate.html
+++ b/class-karate.html
@@ -161,7 +161,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Discover the art of Karate at Golden Tiger Academy in Dunboyne. Our experienced instructors offer classes suitable for individuals of all ages and skill levels, whether you're taking your first steps or refining advanced techniques. With a focus on personalized instruction, our classes cater to the unique needs of each student. Join us to improve your fitness, master self-defense skills, and gain confidence in a supportive atmosphere. Begin your Karate journey today at Golden Tiger Academy Dunboyne." />
-    <title>Karate | Golden Tiger Academy</title>
+    <title>Kenpo Karate | Golden Tiger Academy</title>
   </head>
   <body id="class-karate-body">
     <!-- Google Tag Manager (noscript) -->
@@ -196,7 +196,7 @@
     <!-- Hero - Intro Section  -->
     <section class="class-intro-container-outer">
       <div class="class-intro-container-inner">
-        <h1 class="class-title">Karate</h1>
+        <h1 class="class-title">Kenpo Karate</h1>
         <p>Kenpo Karate, a dynamic martial art rooted in Japanese and Chinese traditions, offers practitioners a comprehensive system of self-defense techniques and physical conditioning, making it relevant not only in traditional martial arts but also in MMA (Mixed Martial Arts). Renowned for its practicality and adaptability, Kenpo Karate emphasizes rapid strikes, fluid movement, and efficient counterattacks, essential skills for any Mixed Martial Artist. With a focus on both physical and mental development, Kenpo Karate fosters discipline, confidence, and situational awareness. Join us to explore the art of Kenpo Karate and unlock your potential in a supportive and empowering environment for both traditional martial arts and MMA enthusiasts alike.</p>
       </div>
       <div class="shape-divider-bottom">
