--- a/index.html
+++ b/index.html
@@ -509,9 +509,9 @@
           <!--Friday Row 3 -->
           <td class="class closed" data-cell="class">Closed</td>
           <!-- Saturday Row 3 -->
-          <td class="class open-mat" data-cell="class">
-            Open Mat (16+)
-            <div class="time" data-cell="time">12:30pm - 1:30pm</div>
+          <td class="class karate" data-cell="class">
+            Kenpo Karate
+            <div class="time" data-cell="time">11:30am - 12:30pm</div>
           </td>
           <!--Sunday Row 3 -->
           <td class="class closed" data-cell="class">Closed</td>
@@ -520,7 +520,7 @@
           <!-- Monday Row 4 -->
           <td class="class wing-tsun" data-cell="class">
             Wing Tsun Kung Fu
-            <div class="time" data-cell="time">8:30pm - 10:00pm</div>
+            <div class="time" data-cell="time">8:30pm - 10pm</div>
           </td>
           <!-- Tuesday Row 4 -->
           <td></td>
@@ -534,7 +534,10 @@
           <!-- Friday Row 4 -->
           <td class="class closed" data-cell="class">Closed</td>
           <!-- Saturday Row 4 -->
-          <td data-cell="class"></td>
+          <td class="class open-mat" data-cell="class">
+            Open Mat (16+)
+            <div class="time" data-cell="time">12:30pm - 1:30pm</div>
+          </td>
           <!-- Sunday Row 4 -->
           <td class="class closed" data-cell="class">Closed</td>
         </tr>
@@ -566,7 +569,7 @@
         <tr>
           <td class="class" data-cell="class">
             Wing Tsun
-            <span class="time" data-cell="time">8:30pm - 10:00pm</span>
+            <span class="time" data-cell="time">8:30pm - 10pm</span>
           </td>
         </tr>
         <!-- Tuesday -->
