Added Kids Muay thai with coming soon ribbon

--- a/class-bjj.html
+++ b/class-bjj.html
@@ -229,7 +229,7 @@
             <p>On Tuesdays, we have an advanced sparring class. This No-Gi sparring session is exclusively for students who have achieved at least a two-stripe white belt in BJJ.</p>
           </div>
           <div class="class-format">
-            <h2>Kids / Teens Classes</h2>
+            <h2>Kids / Teens BJJ Classes</h2>
             <p>Designed for kids (5-12) and teens (13-17), our classes offer a safe, enjoyable space to learn Brazilian Jiu-Jitsu while building confidence. We emphasize confidence, discipline, and fitness through engaging activities, ensuring a positive experience for all participants.</p>
           </div>
         </div>
