--- a/class-muay-thai.html
+++ b/class-muay-thai.html
@@ -220,6 +220,12 @@
             <h2>Muay Thai Class</h2>
             <p>Our Muay Thai classes kick off with an energizing warm-up, followed by technique training involving pads and partner drills suitable for all experience levels. We also delve into Muay Boran, the precursor to Muay Thai, adding depth to your training. Sparring sessions provide an opportunity to test and refine your skills in a supportive environment. Join us for dynamic warm-ups, focused technique drills, and friendly sparring matches to begin your Muay Thai journey today.</p>
           </div>
+
+          <div class="class-format">
+            <aside class="arrow">Coming Soon!</aside>
+            <h2>Kids / Teens Muay Thai Class</h2>
+            <p>Designed for kids (7-14) will be starting in September. Providing a safe and fun introduction into the art of Muay Thai. These classes will focus on building fundamental skills, enhancing physical fitness, and promoting discipline and self-confidence. Contact us today to enroll your child and secure a spot, as spaces are limited.</p>
+          </div>
         </div>
       </div>
       <div class="shape-divider-bottom">
