Adding "Kids / Teens Class Coming Soon!" ribbon  to the class  card on the homepage and updated the class card description.

--- a/class-muay-thai.html
+++ b/class-muay-thai.html
@@ -224,7 +224,7 @@
           <div class="class-format">
             <aside class="arrow">Coming Soon!</aside>
             <h2>Kids / Teens Muay Thai Class</h2>
-            <p>Designed for kids (7-14) will be starting in September. Providing a safe and fun introduction into the art of Muay Thai. These classes will focus on building fundamental skills, enhancing physical fitness, and promoting discipline and self-confidence. Contact us today to enroll your child and secure a spot, as spaces are limited.</p>
+            <p>Designed for kids (7-14) will be starting in September 2024. Providing a safe and fun introduction into the art of Muay Thai. These classes will focus on building fundamental skills, enhancing physical fitness, and promoting discipline and self-confidence. Contact us today to enroll your child and secure a spot, as spaces are limited.</p>
           </div>
         </div>
       </div>
