--- a/index.html
+++ b/index.html
@@ -271,10 +271,12 @@
             <a href="./class-karate" class="card-btn class-karate">Learn More <span class="sr-only">about Kenpo Karate</span></a>
           </div>
         </div>
+
         <div class="card card3">
+          <div class="ribbon">Kids / Teens Class Coming Soon!</div>
           <div class="card-content">
             <h3 class="card-header">Muay Thai</h3>
-            <p class="card-subheader">Muay Thai, the 'Art of Eight Limbs,' integrates punches, kicks, elbows, and knee strikes. Known for its power and effectiveness, it builds strength and striking precision.</p>
+            <p class="card-subheader">Muay Thai, the 'Art of Eight Limbs,' integrates punches, kicks, elbows, and knee strikes. Known for its power and effectiveness, it builds strength and striking precision. Kids / Teens Class coming soon in September 2024. Contact us to enroll your child and secure a spot.</p>
             <a href="./class-muay-thai" class="card-btn class-muay-thai">Learn More <span class="sr-only">about Muay Thai</span></a>
           </div>
         </div>
