Adding Users message to the thank you page

--- a/thank-you.html
+++ b/thank-you.html
@@ -205,6 +205,9 @@
 
           <p>Your message has been sent. We'll reach out to you as soon as we can. In the meantime feel free to check us out on social media.</p>
 
+          <span>Your message:</span>
+          <p id="user-message"></p>
+
           <div class="social-media-container thank-you">
             <div class="social-media-icons">
               <a href="https://www.facebook.com/goldentigeracademy/" target="_blank">
