--- a/kenpo-karate-sign-up.html
+++ b/kenpo-karate-sign-up.html
@@ -196,7 +196,7 @@
         </div>
 
         <div class="video-container">
-          <video autoplay muted loop id="landing-video" disablepictureinpicture>
+          <video autoplay muted loop playsinline id="landing-video" disablepictureinpicture>
             <source src="./videos/kenpo-karate-sign-up.mov" type="video/mp4" />
           </video>
         </div>
