--- a/kenpo-karate-sign-up.html
+++ b/kenpo-karate-sign-up.html
@@ -161,7 +161,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Discover the art of Karate at Golden Tiger Academy in Dunboyne. Our experienced instructors offer classes suitable for individuals of all ages and skill levels, whether you're taking your first steps or refining advanced techniques. With a focus on personalized instruction, our classes cater to the unique needs of each student. Join us to improve your fitness, master self-defense skills, and gain confidence in a supportive atmosphere. Begin your Karate journey today at Golden Tiger Academy Dunboyne." />
-    <title>Kenpo Karate | Golden Tiger Academy</title>
+    <title>Kenpo Karate Sign Up | Golden Tiger Academy</title>
   </head>
   <body id="class-sign-up-page">
     <!-- Google Tag Manager (noscript) -->
