--- a/kenpo-karate-sign-up.html
+++ b/kenpo-karate-sign-up.html
@@ -160,8 +160,8 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Discover the art of Karate at Golden Tiger Academy in Dunboyne. Our experienced instructors offer classes suitable for individuals of all ages and skill levels, whether you're taking your first steps or refining advanced techniques. With a focus on personalized instruction, our classes cater to the unique needs of each student. Join us to improve your fitness, master self-defense skills, and gain confidence in a supportive atmosphere. Begin your Karate journey today at Golden Tiger Academy Dunboyne." />
-    <title>Kenpo Karate Sign Up | Golden Tiger Academy</title>
+    <meta name="description" content="Join Golden Tiger Academy in Dunboyne for a free karate class. Perfect for all ages and skill levels. Improve fitness, learn self-defense, and gain confidence. Sign up today!" />
+    <title>Free Karate Class in Dunboyne | Join Golden Tiger Academy Today!</title>
   </head>
   <body id="class-sign-up-page">
     <!-- Google Tag Manager (noscript) -->
