Added a link to the logo that goes to the homepage

--- a/kenpo-karate-sign-up.html
+++ b/kenpo-karate-sign-up.html
@@ -169,7 +169,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <header>
       <div class="header-content-container-inner">
-        <span class="logo">Golden Tiger Academy</span>
+        <span class="logo"> <a href="/">Golden Tiger Academy</a></span>
       </div>
       <div class="five-star-reviews">
         <i class="fa fa-star"></i>
