Updated the Kenpo Karate Sign Up  Page to  a Kenpo Karate Kids sign up page
- Updated the video to a kids video.
- Updated the benefits to  kids content

--- a/kenpo-karate-sign-up.html
+++ b/kenpo-karate-sign-up.html
@@ -163,7 +163,7 @@
     <meta name="description" content="Join Golden Tiger Academy in Dunboyne for a free karate class. Perfect for all ages and skill levels. Improve fitness, learn self-defense, and gain confidence. Sign up today!" />
     <title>Free Karate Class in Dunboyne | Join Golden Tiger Academy Today!</title>
   </head>
-  <body id="class-sign-up-page">
+  <body id="class-sign-up-page" class="class-sign-up-page">
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K6FXLSWW" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
@@ -186,8 +186,8 @@
     <div class="hero-section-outer">
       <section class="hero-section-inner">
         <div class="hero-text-container">
-          <h1 id="hero-header">Unlock the Power of Kenpo Karate.</h1>
-          <p id="hero-subheader">Begin Your Kenpo Karate Journey to Self-Defense and Fitness at Golden Tiger Academy. Join Our Dedicated Community and Discover Why Hundreds Have Chosen Us. Book Your Free Class Today.</p>
+          <h1 id="hero-header">Empower Your Child with Kenpo Karate</h1>
+          <p id="hero-subheader">Introduce your child to the exciting world of Kenpo Karate at Golden Tiger Academy in Dunboyne. Our engaging classes for kids aged 5-12 blend fitness, self-defense, and fun. Limited spots available for September – enroll now and secure their spot! Book your free class today!</p>
           <div class="cta-container">
             <div class="cta-wrap draw-border">
               <a href="./contact-us" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Book Your Free Class Today!</a>
@@ -197,7 +197,7 @@
 
         <div class="video-container">
           <video autoplay muted loop playsinline id="landing-video" disablepictureinpicture>
-            <source src="./videos/kenpo-karate-sign-up.mov" type="video/mp4" />
+            <source src="./videos/kenpo-karate-sign-up-kids.MP4" type="video/mp4" />
           </video>
         </div>
       </section>
@@ -214,24 +214,27 @@
         <div class="benefits-text-container">
           <h2>What makes us special</h2>
           <div class="benefits">
-            <img src="./images/icon-mental-health.png" class="class-icon" alt="" />
-            <h3>Expert instruction</h3>
-            <p>Learn from our head intructor Ken Byrne, a black belt with over 38 years of experience in Karate.</p>
+            <img src="./images/icon-self-defense.png" class="class-icon" alt="Self-Defense Icon" />
+            <h3>Exciting and Fun Classes</h3>
+            <p>Learn from Ken Byrne, our head instructor and a black belt with over 38 years of experience in Kenpo Karate, tailored specifically for kids.</p>
           </div>
+
           <div class="benefits">
-            <img src="./images/icon-self-defense.png" class="class-icon" alt="" />
-            <h3>Self-Defence</h3>
-            <p>Protect yourself and others by developing self-defence techniques that be applied in real-life.</p>
+            <img src="./images/icon-self-defense.png" class="class-icon" alt="Self-Defense Icon" />
+            <h3>Practical Self-Defense</h3>
+            <p>Develop essential self-defense techniques designed for real-life scenarios, empowering kids to protect themselves and others.</p>
           </div>
+
           <div class="benefits">
-            <img src="./images/icon-fitness.png" class="class-icon" alt="" />
-            <h3>Improved Fitness</h3>
-            <p>Improve your overall fitness level by enhancing cardiovascular health, strength, flexibility, and agility.</p>
+            <img src="./images/icon-fitness.png" class="class-icon" alt="Fitness Icon" />
+            <h3>Fitness and Agility</h3>
+            <p>Improve cardiovascular health, strength, flexibility, and agility through engaging Kenpo Karate exercises tailored to kids' fitness needs.</p>
           </div>
+
           <div class="benefits">
-            <img src="./images/icon-community.png" class="class-icon" alt="" />
-            <h3>Supportive Community</h3>
-            <p>Become a part of our Kenpo Karate community, where you'll make friends, share your progress, and motivate each other to improve.</p>
+            <img src="./images/icon-community.png" class="class-icon" alt="Community Icon" />
+            <h3>Inclusive Community</h3>
+            <p>Join our supportive Kenpo Karate community where kids make friends, share their progress, and encourage each other to excel.</p>
           </div>
         </div>
       </div>
