Updating page title & meta description

--- a/kenpo-karate-sign-up.html
+++ b/kenpo-karate-sign-up.html
@@ -160,8 +160,8 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Join Golden Tiger Academy in Dunboyne for a free karate class. Perfect for all ages and skill levels. Improve fitness, learn self-defense, and gain confidence. Sign up today!" />
-    <title>Free Karate Class in Dunboyne | Join Golden Tiger Academy Today!</title>
+    <meta name="description" content="Discover Kenpo Karate for kids at Golden Tiger Academy in Dunboyne! Enjoy fitness, self-defense, and fun in our free introductory class. Perfect for ages 5-12. Limited spots – enroll now!" />
+    <title>Free Kids Karate Class in Dunboyne | Join Golden Tiger Academy Today!</title>
   </head>
   <body id="class-sign-up-page" class="class-sign-up-page">
     <!-- Google Tag Manager (noscript) -->
