added ribbon to Kenpo Karate and moved Karate up to position #1

--- a/index.html
+++ b/index.html
@@ -257,8 +257,16 @@
     <section class="our-classes-section-container-outer" id="our-classes">
       <h2>Our Classes</h2>
       <div class="our-classes-section-container-inner">
-        <div class="card card3">
-          <div class="ribbon">Kids / Teens Class Coming Soon!</div>
+        <div class="card card-kenpo-karate">
+          <div class="ribbon">Kids' Karate: Enroll Now, Limited Spots!</div>
+          <div class="card-content">
+            <h3 class="card-header">Kenpo Karate</h3>
+            <p class="card-subheader">Kenpo Karate blends punches, kicks, and blocks for self-defense. Discipline, respect, and physical conditioning are core aspects, fostering personal development and martial skill.</p>
+            <a href="./class-karate" class="card-btn class-karate">Learn More <span class="sr-only">about Kenpo Karate</span></a>
+          </div>
+        </div>
+        <div class="card card-muay-thai">
+          <div class="ribbon">Kids / Teens Class Coming September!</div>
           <div class="card-content">
             <h3 class="card-header">Muay Thai</h3>
             <p class="card-subheader">Muay Thai, the 'Art of Eight Limbs,' integrates punches, kicks, elbows, and knee strikes. Known for its power and effectiveness, it builds strength and striking precision. Kids / Teens Class coming soon in September 2024. Contact us to enroll your child and secure a spot.</p>
@@ -266,7 +274,7 @@
           </div>
         </div>
 
-        <div class="card card1">
+        <div class="card card-bjj">
           <div class="card-content">
             <h3 class="card-header">Brazilian Jiu-Jitsu</h3>
             <p class="card-subheader">BJJ focuses on ground grappling and submissions. Develop self-defense skills, fitness, and mental resilience through technical groundwork. Suitable for all skill levels.</p>
@@ -274,7 +282,7 @@
           </div>
         </div>
 
-        <div class="card card4">
+        <div class="card card-kickboxing">
           <div class="card-content">
             <h3 class="card-header">Kickboxing</h3>
             <p class="card-subheader">Kickboxing combines punches and kicks for a dynamic striking art. Cardiovascular fitness, agility, and strong kicks characterize this sport, promoting overall physical conditioning.</p>
@@ -282,22 +290,14 @@
           </div>
         </div>
 
-        <div class="card card2">
-          <div class="card-content">
-            <h3 class="card-header">Kenpo Karate</h3>
-            <p class="card-subheader">Kenpo Karate blends punches, kicks, and blocks for self-defense. Discipline, respect, and physical conditioning are core aspects, fostering personal development and martial skill.</p>
-            <a href="./class-karate" class="card-btn class-karate">Learn More <span class="sr-only">about Kenpo Karate</span></a>
-          </div>
-        </div>
-
-        <div class="card card5">
+        <div class="card card-wing-tsun">
           <div class="card-content">
             <h3 class="card-header">Wing Tsun Kung Fu</h3>
             <p class="card-subheader">Wing Tsun Kung Fu is a martial art that emphasizes efficiency and directness in self-defense. Developed by Grandmaster Leung Ting, it focuses on practical techniques and scientific principles.</p>
             <a href="./class-kung-fu" class="card-btn class-kung-fu">Learn More <span class="sr-only">about Kung Fu</span></a>
           </div>
         </div>
-        <div class="card card6">
+        <div class="card card-korean-kickboxing">
           <div class="card-content">
             <h3 class="card-header">Korean Kickboxing</h3>
             <p class="card-subheader">Korean style kickboxing is a dynamic kicking art and is influenced by various martial arts styles including Won Hwa Do, Taekwondo and kickboxing.</p>
