Converting images to .webp

--- a/class-karate.html
+++ b/class-karate.html
@@ -209,7 +209,7 @@
     <!-- Section - Our Karate Class Format -->
     <section class="our-class-format-container-outer">
       <div class="our-class-format-container-inner">
-        <img src="./images/page-karate-01.png" alt="Karate Sparring class at Golde Tiger Academy" />
+        <img src="./images/page-karate-01.webp" alt="Karate Sparring class at Golde Tiger Academy" />
 
         <div class="class-text">
           <div class="class-format">
@@ -242,22 +242,22 @@
         <div class="benefits-text-container">
           <h2>The Benefits</h2>
           <div class="benefits">
-            <img src="./images/icon-self-defense.png" class="class-icon" alt="" />
+            <img src="./images/icon-self-defense.webp" class="class-icon" alt="" />
             <h3>Self-Defense</h3>
             <p>Develop practical self-defense skills and techniques that can be applied in real-life situations, empowering you to protect yourself and others effectively.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-fitness.png" class="class-icon" alt="" />
+            <img src="./images/icon-fitness.webp" class="class-icon" alt="" />
             <h3>Improved Fitness</h3>
             <p>mprove your overall fitness level by enhancing cardiovascular health, strength, flexibility, and agility through rigorous Karate training routines and techniques.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-mental-health.png" class="class-icon" alt="" />
+            <img src="./images/icon-mental-health.webp" class="class-icon" alt="" />
             <h3>Mental Wellness</h3>
             <p>Cultivate mental discipline, concentration, and focus as you navigate the intricate movements and principles of Karate, leading to improved mental clarity and mindfulness.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-community.png" class="class-icon" alt="" />
+            <img src="./images/icon-community.webp" class="class-icon" alt="" />
             <h3>Supportive Community</h3>
             <p>Join a supportive community where you'll forge friendships, share experiences, and encourage each other to reach new heights in your Karate journey.</p>
           </div>
@@ -272,7 +272,7 @@
       <div class="first-class-container-inner">
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-tshirt.png" class="icon" alt="" />
+            <img src="./images/icon-tshirt.webp" class="icon" alt="" />
           </div>
 
           <h4>Dress Comforably</h4>
@@ -280,14 +280,14 @@
         </div>
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-water-bottle.png" class="icon" alt="" />
+            <img src="./images/icon-water-bottle.webp" class="icon" alt="" />
           </div>
           <h4>Stay Hydrated</h4>
           <p>Bring along a water bottle to keep yourself hydrated during training.</p>
         </div>
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-scissors.png" class="icon" alt="" />
+            <img src="./images/icon-scissors.webp" class="icon" alt="" />
           </div>
           <h4>Safety First</h4>
           <p>Remove jewelry and trim your fingernails and toenails. This reduces the risk of accidental injury</p>
