--- a/kenpo-karate-sign-up.html
+++ b/kenpo-karate-sign-up.html
@@ -214,25 +214,25 @@
         <div class="benefits-text-container">
           <h2>What makes us special</h2>
           <div class="benefits">
-            <img src="./images/icon-self-defense.png" class="class-icon" alt="Self-Defense Icon" />
+            <img src="./images/icon-self-defense.webp" class="class-icon" alt="Self-Defense Icon" />
             <h3>Exciting and Fun Classes</h3>
             <p>Learn from Ken Byrne, our head instructor and a black belt with over 38 years of experience in Kenpo Karate, tailored specifically for kids.</p>
           </div>
 
           <div class="benefits">
-            <img src="./images/icon-self-defense.png" class="class-icon" alt="Self-Defense Icon" />
+            <img src="./images/icon-self-defense.webp" class="class-icon" alt="Self-Defense Icon" />
             <h3>Practical Self-Defense</h3>
             <p>Develop essential self-defense techniques designed for real-life scenarios, empowering kids to protect themselves and others.</p>
           </div>
 
           <div class="benefits">
-            <img src="./images/icon-fitness.png" class="class-icon" alt="Fitness Icon" />
+            <img src="./images/icon-fitness.webp" class="class-icon" alt="Fitness Icon" />
             <h3>Fitness and Agility</h3>
             <p>Improve cardiovascular health, strength, flexibility, and agility through engaging Kenpo Karate exercises tailored to kids' fitness needs.</p>
           </div>
 
           <div class="benefits">
-            <img src="./images/icon-community.png" class="class-icon" alt="Community Icon" />
+            <img src="./images/icon-community.webp" class="class-icon" alt="Community Icon" />
             <h3>Inclusive Community</h3>
             <p>Join our supportive Kenpo Karate community where kids make friends, share their progress, and encourage each other to excel.</p>
           </div>
@@ -251,21 +251,21 @@
       <div class="testimonials-section-container-inner">
         <div class="testimonial-card hidden">
           <h3>Liam McBride</h3>
-          <img src="./images/icon-5-stars.png" class="icon-stars" alt="5 stars" />
+          <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">Great club with a great coach. A very friendly and encouraging environment to learn and grow, with a good selection of various martial arts on offer.</p>
-          <img src="./images/icon-google-reviews.png" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
           <h3>Daniel McTigue</h3>
-          <img src="./images/icon-5-stars.png" class="icon-stars" alt="5 stars" />
+          <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">I've been training here and love it! I was quite nervous starting but Ken is such a nice guy and everyone makes you feel so welcome! Would highly recommend!</p>
-          <img src="./images/icon-google-reviews.png" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
         </div>
         <div class="testimonial-card hidden">
           <h3>Laurence Coleman</h3>
-          <img src="./images/icon-5-stars.png" class="icon-stars" alt="5 stars" />
+          <img src="./images/icon-5-stars.webp" class="icon-stars" alt="5 stars" />
           <p class="testimonial-review">Great place to start a martial art. Doesn’t matter what age you’ll find it fits perfectly in your life. It gives you a solid workout also a new and exciting discipline.</p>
-          <img src="./images/icon-google-reviews.png" alt="" class="icon-google" />
+          <img src="./images/icon-google-reviews.webp" alt="" class="icon-google" />
         </div>
       </div>
     </section>
