--- a/class-muay-thai.html
+++ b/class-muay-thai.html
@@ -209,7 +209,7 @@
     <!-- Section - Our Mauy Thai Class Format -->
     <section class="our-class-format-container-outer">
       <div class="our-class-format-container-inner">
-        <img src="./images/page-muay-thai-01.png" alt="Muay Thai Heavy Bags in Golden Tiger Academy" />
+        <img src="./images/page-muay-thai-01.webp" alt="Muay Thai Heavy Bags in Golden Tiger Academy" />
 
         <div class="class-text">
           <div class="class-format">
@@ -243,22 +243,22 @@
         <div class="benefits-text-container">
           <h2>The Benefits</h2>
           <div class="benefits">
-            <img src="./images/icon-self-defense.png" class="class-icon" alt="" />
+            <img src="./images/icon-self-defense.webp" class="class-icon" alt="" />
             <h3>Self-Defense</h3>
             <p>Acquire practical skills to defend yourself confidently in various situations, boosting your sense of safety and security.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-fitness.png" class="class-icon" alt="" />
+            <img src="./images/icon-fitness.webp" class="class-icon" alt="" />
             <h3>Improved Fitness</h3>
             <p>Elevate your cardiovascular endurance, strength, and overall fitness through intense Muay Thai workouts and techniques.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-mental-health.png" class="class-icon" alt="" />
+            <img src="./images/icon-mental-health.webp" class="class-icon" alt="" />
             <h3>Mental Wellness</h3>
             <p>Build mental toughness, focus, and discipline as you face the challenges and triumphs of Muay Thai training, leading to better stress management and resilience.</p>
           </div>
           <div class="benefits">
-            <img src="./images/icon-community.png" class="class-icon" alt="" />
+            <img src="./images/icon-community.webp" class="class-icon" alt="" />
             <h3>Supportive Community</h3>
             <p>Join a supportive community where you'll forge friendships, share experiences, and encourage each other to reach new heights in your Muay Thai journey.</p>
           </div>
@@ -273,7 +273,7 @@
       <div class="first-class-container-inner">
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-tshirt.png" class="icon" alt="" />
+            <img src="./images/icon-tshirt.webp" class="icon" alt="" />
           </div>
 
           <h4>Dress Comforably</h4>
@@ -281,14 +281,14 @@
         </div>
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-water-bottle.png" class="icon" alt="" />
+            <img src="./images/icon-water-bottle.webp" class="icon" alt="" />
           </div>
           <h4>Stay Hydrated</h4>
           <p>Bring along a water bottle to keep yourself hydrated during training.</p>
         </div>
         <div class="tip hidden">
           <div class="tip-image">
-            <img src="./images/icon-scissors.png" class="icon" alt="" />
+            <img src="./images/icon-scissors.webp" class="icon" alt="" />
           </div>
           <h4>Safety First</h4>
           <p>Remove jewelry and trim your fingernails and toenails. This reduces the risk of accidental injury</p>
