Minified all of the CSS &  Javascript to improve performance

--- a/class-kickboxing.html
+++ b/class-kickboxing.html
@@ -158,7 +158,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./styles.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Elevate your fitness game with exhilarating kickboxing classes at Golden Tiger Academy in Dunboyne. From beginners to seasoned athletes, our dynamic sessions cater to all skill levels, blending technique, strength, and cardio for a full-body workout. Join our supportive community and unleash your potential with kickboxing." />
     <title>Kickboxing | Golden Tiger Academy</title>
@@ -338,7 +338,7 @@
       </div>
     </footer>
 
-    <script src="./mobile-nav.js"></script>
-    <script src="./animate.js"></script>
+    <script src="./mobile-nav.min.js"></script>
+    <script src="./animate.min.js"></script>
   </body>
 </html>
