--- a/class-korean-kickboxing.html
+++ b/class-korean-kickboxing.html
@@ -158,7 +158,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./styles.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Discover the exhilarating world of Korean Kickboxing at Golden Tiger Academy! Led by Ken Byrne, a 5th-degree black belt, our classes offer a unique blend of Korean Kickboxing techniques tailored for young warriors. Join us to empower your kids with confidence, dynamic techniques, and the energy of Korean Kickboxing!" />
     <title>Korean Kickboxing | Golden Tiger Academy</title>
@@ -338,7 +338,7 @@
       </div>
     </footer>
 
-    <script src="./mobile-nav.js"></script>
-    <script src="./animate.js"></script>
+    <script src="./mobile-nav.min.js"></script>
+    <script src="./animate.min.js"></script>
   </body>
 </html>
