--- a/thank-you.html
+++ b/thank-you.html
@@ -262,6 +262,6 @@
         </div>
       </div>
     </footer>
-    <script src="./thank-you.js"></script>
+    <script src="./thank-you.min.js"></script>
   </body>
 </html>
