--- a/404.html
+++ b/404.html
@@ -158,7 +158,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./styles.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Explore martial arts excellence at Golden Tiger Academy in Dunboyne. Classes for all ages and levels, from beginners to advanced. Expert instructors guide kids, fitness enthusiasts, and self-defense seekers. Unleash your potential in a supportive environment. Elevate your fitness journey at Golden Tiger Academy Dunboyne." />
     <title>Page Not Found | Golden Tiger Academy</title>
