--- a/class-bjj.html
+++ b/class-bjj.html
@@ -158,7 +158,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./styles.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Discover the art of Brazilian Jiu-Jitsu at Golden Tiger Academy in Dunboyne. Our expert instructors offer classes for all ages and levels, from beginners to advanced practitioners. Whether you're a kid, fitness enthusiast, or self-defense seeker, join us to unleash your potential in a supportive environment. Elevate your fitness journey at Golden Tiger Academy Dunboyne." />
     <title>Brazilian Jiu-Jitsu | Golden Tiger Academy</title>
@@ -354,7 +354,7 @@
       </div>
     </footer>
 
-    <script src="./mobile-nav.js"></script>
-    <script src="./animate.js"></script>
+    <script src="./mobile-nav.min.js"></script>
+    <script src="./animate.min.js"></script>
   </body>
 </html>
