--- a/class-kung-fu.html
+++ b/class-kung-fu.html
@@ -158,7 +158,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./styles.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Unveil the ancient art of Kung Fu at Golden Tiger Academy in Dunboyne. Our skilled instructors cater to all skill levels and ages, providing a supportive atmosphere for beginners and advanced practitioners alike. Whether you're a young enthusiast, fitness aficionado, or seeking self-defense mastery, our classes empower you to reach new heights. Elevate your martial arts journey with Golden Tiger Academy Dunboyne." />
     <title>Wing Tsun Kung Fu | Golden Tiger Academy</title>
@@ -342,7 +342,7 @@
       </div>
     </footer>
 
-    <script src="./mobile-nav.js"></script>
-    <script src="./animate.js"></script>
+    <script src="./mobile-nav.min.js"></script>
+    <script src="./animate.min.js"></script>
   </body>
 </html>
