--- a/class-muay-thai.html
+++ b/class-muay-thai.html
@@ -158,7 +158,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./styles.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Explore the world of Muay Thai at Golden Tiger Academy in Dunboyne. Our skilled instructors provide classes tailored to individuals of all ages and skill levels, from novices to seasoned practitioners. Whether you're a beginner or an advanced student, our classes cater to your needs. Join us to enhance your fitness, learn self-defense techniques, and build confidence in a welcoming environment. Start your Muay Thai journey today at Golden Tiger Academy Dunboyne." />
     <title>Muay Thai | Golden Tiger Academy</title>
@@ -348,7 +348,7 @@
       </div>
     </footer>
 
-    <script src="./mobile-nav.js"></script>
-    <script src="./animate.js"></script>
+    <script src="./mobile-nav.min.js"></script>
+    <script src="./animate.min.js"></script>
   </body>
 </html>
