--- a/contact-us.html
+++ b/contact-us.html
@@ -157,7 +157,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./styles.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Contact Golden Tiger Academy in Dunboyne for any questions, messages, or to schedule a free trial session. Whether you're a beginner or an experienced practitioner. Reach out today to get started!" />
     <title>Contact Us | Golden Tiger Academy</title>
@@ -275,7 +275,7 @@
       </div>
     </footer>
 
-    <script src="./contact-us.js"></script>
+    <script src="./contact-us.min.js"></script>
     <script src="https://web3forms.com/client/script.js" async defer></script>
   </body>
 </html>
