--- a/gallery.html
+++ b/gallery.html
@@ -158,7 +158,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./styles.min.css" />
     <link rel="stylesheet" href="./lightbox.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Contact Golden Tiger Academy in Dunboyne for any questions, messages, or to schedule a free trial session. Whether you're a beginner or an experienced practitioner. Reach out today to get started!" />
@@ -260,7 +260,7 @@
       </div>
     </footer>
 
-    <script src="./mobile-nav.js"></script>
+    <script src="./mobile-nav.min.js"></script>
     <script src="./lightbox-plus-jquery.js"></script>
     <script src="https://web3forms.com/client/script.js" async defer></script>
   </body>
