--- a/kenpo-karate-sign-up.html
+++ b/kenpo-karate-sign-up.html
@@ -158,7 +158,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./styles.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Discover Kenpo Karate for kids at Golden Tiger Academy in Dunboyne! Enjoy fitness, self-defense, and fun in our free introductory class. Perfect for ages 5-12. Limited spots – enroll now!" />
     <title>Free Kids Karate Class in Dunboyne | Join Golden Tiger Academy Today!</title>
@@ -276,6 +276,6 @@
       </div>
     </div>
 
-    <script src="./animate.js"></script>
+    <script src="./animate.min.js"></script>
   </body>
 </html>
