--- a/what-is-brazilian-jiu-jitsu-bjj.html
+++ b/what-is-brazilian-jiu-jitsu-bjj.html
@@ -158,7 +158,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./styles.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="What is Brazilian Jiu Jitsu (BJJ)? - a martial art emphasizing ground fighting, leverage, and technique. Learn about BJJ's principles, techniques like submissions and positions, and its benefits for self-defense and fitness." />
     <title>What is Brazilian Jiu-Jitsu ?</title>
@@ -266,6 +266,6 @@
         </div>
       </div>
     </footer>
-    <script src="./animate.js"></script>
+    <script src="./animate.min.js"></script>
   </body>
 </html>
