--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- End Google Tag Manager -->
 
     <!-- Hotjar Tracking Code for https://goldentigeracademy.com/ -->
-    <script>
+    <!-- <script>
       (function (h, o, t, j, a, r) {
         h.hj =
           h.hj ||
@@ -31,7 +31,7 @@
         r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
         a.appendChild(r);
       })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
-    </script>
+    </script> -->
 
     <!-- Start VWO Async SmartCode -->
     <link rel="preconnect" href="https://dev.visualwebsiteoptimizer.com" />
