Removing AWO manual code

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- End Google Tag Manager -->
 
     <!-- Start VWO Async SmartCode -->
-    <link rel="preconnect" href="https://dev.visualwebsiteoptimizer.com" />
+    <!-- <link rel="preconnect" href="https://dev.visualwebsiteoptimizer.com" />
     <script type="text/javascript" id="vwoCode">
       window._vwo_code ||
         (function () {
@@ -128,7 +128,7 @@
           w._vwo_code = code;
           code.init();
         })();
-    </script>
+    </script> -->
     <!-- End VWO Async SmartCode -->
 
     <meta charset="UTF-8" />
