Updating class title tags

--- a/class-kickboxing.html
+++ b/class-kickboxing.html
@@ -187,7 +187,7 @@
     <link rel="stylesheet" href="./styles.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Elevate your fitness game with exhilarating kickboxing classes at Golden Tiger Academy in Dunboyne. From beginners to seasoned athletes, our dynamic sessions cater to all skill levels, blending technique, strength, and cardio for a full-body workout. Join our supportive community and unleash your potential with kickboxing." />
-    <title>Kickboxing | Golden Tiger Academy</title>
+    <title>Learn Kickboxing Techniques from Experts</title>
   </head>
   <body id="class-kickboxing-body">
     <!-- Google Tag Manager (noscript) -->
