--- a/class-korean-kickboxing.html
+++ b/class-korean-kickboxing.html
@@ -187,7 +187,7 @@
     <link rel="stylesheet" href="./styles.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Discover the exhilarating world of Korean Kickboxing at Golden Tiger Academy! Led by Ken Byrne, a 5th-degree black belt, our classes offer a unique blend of Korean Kickboxing techniques tailored for young warriors. Join us to empower your kids with confidence, dynamic techniques, and the energy of Korean Kickboxing!" />
-    <title>Korean Kickboxing | Golden Tiger Academy</title>
+    <title>Korean Kickboxing Classes for Kids: Fun & Fitness</title>
   </head>
   <body id="class-korean-kickboxing-body">
     <!-- Google Tag Manager (noscript) -->
