--- a/class-kung-fu.html
+++ b/class-kung-fu.html
@@ -187,7 +187,7 @@
     <link rel="stylesheet" href="./styles.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Unveil the ancient art of Kung Fu at Golden Tiger Academy in Dunboyne. Our skilled instructors cater to all skill levels and ages, providing a supportive atmosphere for beginners and advanced practitioners alike. Whether you're a young enthusiast, fitness aficionado, or seeking self-defense mastery, our classes empower you to reach new heights. Elevate your martial arts journey with Golden Tiger Academy Dunboyne." />
-    <title>Wing Tsun Kung Fu | Golden Tiger Academy</title>
+    <title>Expert Kung Fu Classes and Training</title>
   </head>
   <body id="class-kung-fu-body">
     <!-- Google Tag Manager (noscript) -->
