--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
           <div class="card-content">
             <h3 class="card-header">Kenpo Karate</h3>
             <p class="card-subheader">Kenpo Karate blends punches, kicks, and blocks for self-defense. Discipline, respect, and physical conditioning are core aspects, fostering personal development and martial skill.</p>
-            <a href="./class-karate" class="card-btn class-karate">Learn More <span class="sr-only">about Kenpo Karate</span></a>
+            <a href="./karate.html" class="card-btn class-karate">Learn More <span class="sr-only">about Kenpo Karate</span></a>
           </div>
         </div>
         <div class="card card-muay-thai">
@@ -296,7 +296,7 @@
           <div class="card-content">
             <h3 class="card-header">Muay Thai</h3>
             <p class="card-subheader">Muay Thai, the 'Art of Eight Limbs,' integrates punches, kicks, elbows, and knee strikes. Known for its power and effectiveness, it builds strength and striking precision. Kids / Teens Class coming soon in September 2024. Contact us to enroll your child and secure a spot.</p>
-            <a href="./class-muay-thai" class="card-btn class-muay-thai">Learn More <span class="sr-only">about Muay Thai</span></a>
+            <a href="./muay-thai.html" class="card-btn class-muay-thai">Learn More <span class="sr-only">about Muay Thai</span></a>
           </div>
         </div>
 
@@ -304,7 +304,7 @@
           <div class="card-content">
             <h3 class="card-header">Brazilian Jiu-Jitsu</h3>
             <p class="card-subheader">BJJ focuses on ground grappling and submissions. Develop self-defense skills, fitness, and mental resilience through technical groundwork. Suitable for all skill levels.</p>
-            <a href="./class-bjj" class="card-btn class-bjj">Learn More <span class="sr-only">about Brazilian Jiu-Jitsu</span></a>
+            <a href="./bjj.html" class="card-btn class-bjj">Learn More <span class="sr-only">about Brazilian Jiu-Jitsu</span></a>
           </div>
         </div>
 
@@ -312,7 +312,7 @@
           <div class="card-content">
             <h3 class="card-header">Kickboxing</h3>
             <p class="card-subheader">Kickboxing combines punches and kicks for a dynamic striking art. Cardiovascular fitness, agility, and strong kicks characterize this sport, promoting overall physical conditioning.</p>
-            <a href="./class-kickboxing" class="card-btn class-kickboxing">Learn More <span class="sr-only">about Kickboxing</span></a>
+            <a href="./kickboxing.html" class="card-btn class-kickboxing">Learn More <span class="sr-only">about Kickboxing</span></a>
           </div>
         </div>
 
@@ -320,14 +320,14 @@
           <div class="card-content">
             <h3 class="card-header">Wing Tsun Kung Fu</h3>
             <p class="card-subheader">Wing Tsun Kung Fu is a martial art that emphasizes efficiency and directness in self-defense. Developed by Grandmaster Leung Ting, it focuses on practical techniques and scientific principles.</p>
-            <a href="./class-kung-fu" class="card-btn class-kung-fu">Learn More <span class="sr-only">about Kung Fu</span></a>
+            <a href="./kung-fu.html" class="card-btn class-kung-fu">Learn More <span class="sr-only">about Kung Fu</span></a>
           </div>
         </div>
         <div class="card card-korean-kickboxing">
           <div class="card-content">
             <h3 class="card-header">Korean Kickboxing</h3>
             <p class="card-subheader">Korean style kickboxing is a dynamic kicking art and is influenced by various martial arts styles including Won Hwa Do, Taekwondo and kickboxing.</p>
-            <a href="./class-korean-kickboxing" class="card-btn class-korean-kickboxing">Learn More <span class="sr-only">about Korean Kickboxing</span></a>
+            <a href="./korean-kickboxing.html" class="card-btn class-korean-kickboxing">Learn More <span class="sr-only">about Korean Kickboxing</span></a>
           </div>
         </div>
       </div>
