--- a/kenpo-karate-sign-up.html
+++ b/kenpo-karate-sign-up.html
@@ -187,7 +187,7 @@
     <link rel="stylesheet" href="./styles.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Discover Kenpo Karate for kids at Golden Tiger Academy in Dunboyne! Enjoy fitness, self-defense, and fun in our free introductory class. Perfect for ages 5-12. Limited spots – enroll now!" />
-    <title>Free Kids Karate Class in Dunboyne | Join Golden Tiger Academy Today!</title>
+    <title>Kids Karate Class in Dunboyne: First Class Free!</title>
   </head>
   <body id="class-sign-up-page" class="class-sign-up-page">
     <!-- Google Tag Manager (noscript) -->
