--- a/what-is-brazilian-jiu-jitsu-bjj.html
+++ b/what-is-brazilian-jiu-jitsu-bjj.html
@@ -187,7 +187,7 @@
     <link rel="stylesheet" href="./styles.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="What is Brazilian Jiu Jitsu (BJJ)? - a martial art emphasizing ground fighting, leverage, and technique. Learn about BJJ's principles, techniques like submissions and positions, and its benefits for self-defense and fitness." />
-    <title>What is Brazilian Jiu-Jitsu ?</title>
+    <title>What is Brazilian Jiu-Jitsu (BJJ)? A Beginner's Guide</title>
   </head>
   <body id="what-is-bjj">
     <!-- Google Tag Manager (noscript) -->
